gitops/apps/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: relay
  labels:
    platform/project: relay
