gitops/apps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: relay
  namespace: relay
  labels:
    platform/project: relay
    app: relay
spec:
  selector:
    app: relay
  ports:
    - name: nostr
      port: 80
      targetPort: nostr
